force-app/main/default/objects/WorkOrder/fields/Scheduling_Range__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Range__c</fullName>
    <formula>IF( NOT(ISNULL(Order_Date__c )) , TEXT(MONTH(Order_Date__c - (WEEKDAY(Order_Date__c ) - 1))) + &quot;/&quot; + TEXT(DAY(Order_Date__c - (WEEKDAY(Order_Date__c ) - 1))) + &quot;/&quot; + TEXT(YEAR(Order_Date__c - (WEEKDAY(Order_Date__c ) - 1)))+&apos; To &apos;+ 
TEXT(MONTH(Order_Date__c + (7 - WEEKDAY(Order_Date__c )))) + &quot;/&quot; + TEXT(DAY(Order_Date__c + (7 - WEEKDAY(Order_Date__c )))) + &quot;/&quot; +  TEXT(YEAR(Order_Date__c + (7 - WEEKDAY(Order_Date__c )))),&quot;&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Range</label>
    <type>Text</type>
</CustomField>