force-app/main/default/objects/WorkOrder/fields/Service_Duration_In_Mins__c.field-meta.xml
<CustomField>
    <fullName>Service_Duration_In_Mins__c</fullName>
    <formula>(DATETIMEVALUE(SUBSTITUTE(Service_EndTime__c , &quot;T&quot;, &quot; &quot;) ) - DATETIMEVALUE( SUBSTITUTE(Service_StartTime__c , &quot;T&quot;, &quot; &quot;))) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Duration (In Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>