force-app/main/default/objects/WorkOrder/fields/Service_EndTime__c.field-meta.xml
<CustomField>
    <fullName>Service_EndTime__c</fullName>
    <label>Service EndTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>