force-app/main/default/objects/WorkOrder/fields/Service_Family__c.field-meta.xml
<CustomField>
    <fullName>Service_Family__c</fullName>
    <label>Service Family</label>
    <length>128</length>
    <type>Text</type>
</CustomField>