force-app/main/default/objects/WorkOrder/fields/Service_StartTime__c.field-meta.xml
<CustomField>
    <fullName>Service_StartTime__c</fullName>
    <label>Service StartTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>