force-app/main/default/objects/WorkOrder/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Auto Populated during WorkOrder Creation from Service Needed</description>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CM</fullName>
                <label>Container Management</label>
            </value>
            <value>
                <fullName>GT</fullName>
                <label>Grease Traps</label>
            </value>
            <value>
                <fullName>HYD</fullName>
                <label>Hydro-jetting</label>
            </value>
            <value>
                <fullName>INT</fullName>
                <label>Interceptor</label>
            </value>
            <value>
                <fullName>UCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>