force-app/main/default/objects/WorkOrder/fields/Status_Category_OR__c.field-meta.xml
<CustomField>
    <fullName>Status_Category_OR__c</fullName>
    <label>Status Category OR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Customer Issue</fullName>
            </value>
            <value>
                <fullName>Account Manager Failure</fullName>
            </value>
            <value>
                <fullName>Driver Failure</fullName>
            </value>
            <value>
                <fullName>Operations Failure</fullName>
            </value>
            <value>
                <fullName>External Dependency</fullName>
            </value>
            <value>
                <fullName>Routing Failure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>