force-app/main/default/objects/WorkOrder/fields/Total_Current_Container_Level__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Container_Level__c</fullName>
    <description>Sum of Current Volume (GL) across all related containers.</description>
    <label>Total Current Container Level (GL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>