force-app/main/default/objects/WorkOrder/fields/Travel_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_sec__c</fullName>
    <label>Travel Time [sec]</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>