force-app/main/default/objects/WorkOrder/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Calculates UCO Value</description>
    <formula>IF(
    ISPICKVAL(Status, &quot;Completed&quot;),
    IF(
        OR(
            ISBLANK(Collected_Gallons__c),
            Collected_Gallons__c = 0
        ),
        0,
        ( Commodity_Value__c  - BLANKVALUE(Rebate__c, 0)) * Collected_Gallons__c
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>