force-app/main/default/objects/WorkOrder/fields/Work_Order_Number_Display__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number_Display__c</fullName>
    <formula>HYPERLINK(
    &quot;/lightning/r/WorkOrder/&quot; &amp; Id &amp; &quot;/view&quot;,
    IF(
        ISBLANK(Services_Needed__c),
        WorkOrderNumber,
        CASE(
            Services_Needed__r.RecordType.DeveloperName,
            &quot;Grease_Trap&quot;, &quot;IGT&quot;,
            &quot;Drain_Cleaning&quot;, &quot;HYD&quot;,
            &quot;Interceptor&quot;, &quot;EGT&quot;,
            &quot;Used_Cooking_Oil&quot;, &quot;UCO&quot;,
            &quot;Waste_Run&quot;,&quot;WR&quot;,
            &quot;&quot;
        )
        &amp; &quot;-&quot; &amp;
        WorkOrderNumber
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Number Display</label>
    <type>Text</type>
</CustomField>