force-app/main/default/objects/WorkOrder/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAC</fullName>
            </value>
            <value>
                <fullName>PDX</fullName>
            </value>
            <value>
                <fullName>EUG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>