force-app/main/default/objects/WorkOrder/recordTypes/Default_Work_Orders.recordType-meta.xml
<RecordType>
    <fullName>Default_Work_Orders</fullName>
    <active>false</active>
    <label>Default Work Orders</label>
</RecordType>