force-app/main/default/objects/WorkOrder/listViews/all_work_orders.listView-meta.xml
<ListView>
    <fullName>all_work_orders</fullName>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>Services_Needed__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>4/25/2026</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Not Ready,Not_Ready</value>
    </filters>
    <label>All Work Orders</label>
</ListView>