force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Account</columns>
    <columns>Name</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status</columns>
    <columns>Skills__c</columns>
    <columns>Optimo_Order_Id__c</columns>
    <columns>Failure_Reason__c</columns>
    <columns>Status_Category_OR__c</columns>
    <columns>Action_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Optimo_Date__c</field>
        <operation>equals</operation>
        <value>4/21/2026</value>
    </filters>
    <label>All Work Orders</label>
</ListView>