force-app/main/default/objects/WorkOrder/listViews/Bulk_Edit.listView-meta.xml
<ListView>
    <fullName>Bulk_Edit</fullName>
    <columns>Status</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <columns>Account</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Service_Notes__c</columns>
    <columns>Service_Duration_In_Mins__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Skills__c</columns>
    <columns>Allowed_Days__c</columns>
    <columns>Alarm_Code__c</columns>
    <columns>Door_Code__c</columns>
    <columns>Door_Key__c</columns>
    <columns>Duration_In_Mins__c</columns>
    <columns>Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skills__c</field>
        <operation>equals</operation>
        <value>GT,INT,HYD</value>
    </filters>
    <filters>
        <field>Scheduling_Range__c</field>
        <operation>equals</operation>
        <value>4/5/2026 To 4/11/2026</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>,Not Ready,Not_Ready,Integration Error,Integration_Error</value>
    </filters>
    <label>Bulk Edit</label>
</ListView>