force-app/main/default/objects/WorkOrder/listViews/daily_bg_list_view.listView-meta.xml
<ListView>
    <fullName>daily_bg_list_view</fullName>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Services_Needed__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Rate__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Service_Notes__c</columns>
    <columns>Volume__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Skills__c</columns>
    <columns>Repeat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Unscheduled,Scheduled,Servicing,On Route,On_Route</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>T,P</value>
    </filters>
    <filters>
        <field>Scheduling_Range__c</field>
        <operation>equals</operation>
        <value>4/5/2026 To 4/11/2026</value>
    </filters>
    <label>Daily BG List View</label>
</ListView>