force-app/main/default/objects/WorkOrder/listViews/daily_uco_list_view.listView-meta.xml
<ListView>
    <fullName>daily_uco_list_view</fullName>
    <columns>Account</columns>
    <columns>Services_Needed__c</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Status</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Volume__c</columns>
    <columns>Current_Fill_Level__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Gallons_Per_Month__c</columns>
    <columns>Daily_Fill_Rate__c</columns>
    <columns>Last_Collected_Gallons__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skills__c</field>
        <operation>equals</operation>
        <value>UCO</value>
    </filters>
    <filters>
        <field>Scheduling_Range__c</field>
        <operation>equals</operation>
        <value>3/29/2026 To 4/4/2026</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Unscheduled</value>
    </filters>
    <label>Daily UCO List View</label>
</ListView>