force-app/main/default/objects/WorkOrder/listViews/Due_Date_29Dec.listView-meta.xml
<ListView>
    <fullName>Due_Date_29Dec</fullName>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Due_Date__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Name</columns>
    <columns>Services_Needed__c</columns>
    <columns>CreatedDate</columns>
    <columns>OptimoRoute_Last_Sync__c</columns>
    <columns>Scheduling_Range__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <label>Due Date Next 7 Days</label>
</ListView>