force-app/main/default/objects/WorkOrder/listViews/Follow_Up_Required_Week.listView-meta.xml
<ListView>
    <fullName>Follow_Up_Required_Week</fullName>
    <columns>OptimoRoute_Last_Sync__c</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <columns>Account</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Status</columns>
    <columns>Order_Date__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Scheduling_Range__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Not_Ready,Not Ready,Failed,Rejected,Past_Due,Account_Issues</value>
    </filters>
    <filters>
        <field>Scheduling_Range__c</field>
        <operation>equals</operation>
        <value>3/15/2026 To 3/21/2026</value>
    </filters>
    <label>Follow Up Required (Week)</label>
</ListView>