force-app/main/default/objects/WorkOrder/listViews/New_and_Needs_Approval.listView-meta.xml
<ListView>
    <fullName>New_and_Needs_Approval</fullName>
    <columns>Frequency_Days__c</columns>
    <columns>Account</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>Order_Type__c</columns>
    <columns>Status</columns>
    <columns>Order_Date__c</columns>
    <columns>Services_Needed__c</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Optimo_Order_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New and Needs Approval</label>
</ListView>