force-app/main/default/objects/WorkOrder/listViews/UCO_All_Work_Orders.listView-meta.xml
<ListView>
    <fullName>UCO_All_Work_Orders</fullName>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <columns>Gallons_Per_Month__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Volume__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Daily_Fill_Rate__c</columns>
    <columns>Current_Fill_Level__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Last_Collected_Gallons__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Container_Size_1__c</columns>
    <columns>Collected_Gallons__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skills__c</field>
        <operation>equals</operation>
        <value>UCO</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Integration Error</value>
    </filters>
    <label>UCO - All Work Orders</label>
</ListView>