force-app/main/default/objects/WorkOrder/listViews/UCO_Bulk_Edit.listView-meta.xml
<ListView>
    <fullName>UCO_Bulk_Edit</fullName>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Order_Type__c</columns>
    <columns>Gallons_Per_Month__c</columns>
    <columns>Daily_Fill_Rate__c</columns>
    <columns>Current_Fill_Level__c</columns>
    <columns>Volume__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Last_Completed_Date__c</columns>
    <columns>Frequency_Days__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Last_Collected_Gallons__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Commodity_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <label>UCO Bulk Edit</label>
</ListView>