force-app/main/default/objects/WorkOrder/listViews/weekly_bg_list_view.listView-meta.xml
<ListView>
    <fullName>weekly_bg_list_view</fullName>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>Order_Type__c</columns>
    <columns>Services_Needed__c</columns>
    <columns>Work_Order_Number_Display__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Optimo_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Skills__c</columns>
    <columns>Vehicle_Features__c</columns>
    <columns>Allowed_Days__c</columns>
    <columns>Primary_Time_Window_From__c</columns>
    <columns>Primary_Time_Window_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Not Ready,Not_Ready</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>4/25/2026</value>
    </filters>
    <label>Weekly BG WO View</label>
</ListView>